package observer.observer;

public interface NotificationAlertObserver {
    void upadate();
}
